src/components/Project.module.css
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500&display=swap');

.projects {
  display: flex;
  flex-direction: row;
}

.project__title {
  margin: 0;
  font-family: 'Manrope', sans-serif;
  font-weight: 500;
  font-size: 17px;
  color: #1A1A1A;
}

.project-short__description {
  margin: 8px 0 0 0;
  font-family: 'Manrope', sans-serif;
  font-weight: 500;
  font-size: 13px;
  color: #1A1A1A;
}

.projects img {
  margin: 0 15px 0 0;
}

.project-inner__container {
  display: flex;
  flex-direction: row;
  align-items: center;
}

button {
  background-color: #fff;
  border: 1px solid #d5d9d9;
  border-radius: 8px;
  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
  box-sizing: border-box;
  color: #1A1A1A;
  display: inline-block;
  font-family: 'Manrope', sans-serif;
  font-weight: 500;
  font-size: 13px;
  line-height: 29px;
  padding: 0 10px 0 11px;
  text-align: center;
  letter-spacing: .4px;
}

button:hover {
  background-color: #f7fafa;
  cursor: pointer;
}

.btn {
  padding-left: 13px;
}

.project-details {
  display: flex;
  flex-direction: row;
  padding-bottom: 15px;
  border-bottom: .5px solid #d5d9d9;
}

.title-desc h1 {
  margin: 2px 0 5px 0;
  font-weight: 500;
  font-size: 26px;
}

.title-desc p {
  margin: 0;
  width: 70%;
  color: #1A1A1A;
}

.title-desc {
  margin-left: 20px;
}

.app-img {
  height: 80%;
  width: 80%;
  margin: 35px 20px 0 0;
}

.tech-stack {
  margin: 0 10px 0 0;
  font-size: 16px;
  background-color: #fff;
  border: 1px solid #d5d9d9;
  border-radius: 8px;
  box-sizing: border-box;
  color: #1A1A1A;
  display: inline-block;
  font-family: 'Manrope', sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 29px;
  padding: 15px 20px;
  text-align: center;
  letter-spacing: .4px;
}

.tech-title {
  margin: 15px 0 0 0;
  font-weight: 500;
  font-size: 12px;
  padding: 8px 0 15px 0;
  letter-spacing: 1px;
}

.longDesc {
  width: 60%;
  padding: 15px 0;
  line-height: 1.6;
  font-size: 18px;
}

.visit-btn {
  margin-bottom: 80px;
  padding: 3px 40px;
  font-size: 16px;
  margin-right: 10px;
}

.details-img img {
  width: 100px;
  height: 100px;
}

.close-btn {
  position: fixed;
  right: 30px;
  top: 30px;
}

.project-bottom__border {
  margin: 30px 0 0 115px;
  border: none;
  height: 1px;
  background-color: #d5d9d9;
  font-size: .5px;
}

.project-bottom__border3 {
  display: none;
}

.img-container {
  display: flex;
  flex-direction: row;
  overflow: scroll;
}

.img-container img {
  border-radius: 5px;
}

.project-icon {
  height: 100px;
  width: 100px;
  border-radius: 5px;
  margin-right: 15px;
}

@media (max-width: 988px) {
  .longDesc {
    width: 100%;
    font-size: 15px;
  }

  .project-icon {
    height: 70px;
    width: 70px;
  }

  .project-bottom__border {
    margin: 15px 0 0 85px;
  }

  .project-bottom__border3 {
    margin: 15px 0 0 85px;
    border: none;
    height: 1px;
    background-color: #d5d9d9;
    font-size: .5px;
  }
  
  .project-bottom__border3 {
    display: block;
  }

  .title-desc {
    margin-left: 0px;
  }

  .title-desc p {
    width: 90%;
  }

  .details-img img {
    width: 70px;
    height: 70px;
  }
  .tech-stack {
    padding: 7.5px 10px;
    margin: 0 5px 0 0;
  }
  
  .app-img {
    height: 100%;
    width: 100%;
  }
  .visit-btn {
    font-size: 14px;
    margin-bottom: 100px;
  }
}

